--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 		<title>Pogoseat Demo</title>
 		<meta name="description" content="Minimal Form Interface: Simplistic, single input view form" />
 		<meta name="keywords" content="form, minimal, interface, single input, big form, responsive form, transition" />
@@ -75,7 +76,7 @@
 				</form><!-- /simform -->
 			</section>
 		</div><!-- /container -->
-		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="./public/js/classie.js"></script>
 		<script src="./public/js/stepsForm.js"></script>
 		<script src="./public/js/ap.js"></script>
